--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "source": [
     "def ckeck_exist(info,ress):\n",
     "    for item in ress:\n",
@@ -14,11 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
+    "\n",
     "ress = []\n",
     "for genre in range(1, 2):\n",
     "    for page in range(1,3):\n",
@@ -33,10 +34,10 @@
     "            info['中文名稱'] = d.find('div', class_='release_movie_name').find('a', class_='gabtn').text.strip()\n",
     "            info['英文名稱'] = d.find('div', class_='release_movie_name').find('div', class_='en').a.text.strip()\n",
     "            info['上映日期'] = d.find('div', class_='release_movie_time').text.split('上映日期 ： ')[1]\n",
-    "            info['劇情介紹'] = d.find('div', class_='release_text').text.strip()\n",
-    "            info['劇情介紹'] = re.sub('\\s+','', info['劇情介紹'])\n",
-    "\n",
+    "            info['劇情介紹'] = re.sub('\\s+','', d.find('div', class_='release_text').text.strip())\n",
+    "            info['url'] = d.find('div', class_='release_movie_name').a['href']\n",
     "            tf = ckeck_exist(info['中文名稱'],ress)\n",
+    "            \n",
     "            if tf == 0:\n",
     "                continue\n",
     "\n",
@@ -50,10 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(ress)\n",
+    "df = pd.DataFrame(infos)\n",
     "df.to_csv('movies.csv', encoding='utf_8_sig')\n",
     "\n",
     "df"
@@ -63,49 +64,41 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "          中文名稱                                       英文名稱        上映日期  \\\n",
-       "0   小小兵2：格魯的崛起                  Minions: The Rise of Guru  2022-07-01   \n",
-       "1          蝙蝠俠                                 The Batman  2022-03-04   \n",
-       "2          魔比斯                                    Morbius  2022-01-16   \n",
-       "3     捍衛戰士：獨行俠                          Top Gun: Maverick  2021-11-19   \n",
-       "4     魔鬼剋星：未來世                    Ghostbusters: Afterlife  2021-11-11   \n",
-       "5           沙丘                                       Dune  2021-10-14   \n",
-       "6      007生死交戰                             No Time to Die  2021-10-01   \n",
-       "7      猛毒2：血蜘蛛                Venom: Let There Be Carnage  2021-09-16   \n",
-       "8      尚氣與十環傳奇  Shang-Chi and the Legend of the Ten Rings  2021-09-03   \n",
-       "9         疾凍救援                               The Ice Road  2021-08-25   \n",
-       "10       殺手保鑣2              The Hitman's Wife's Bodyguard  2021-08-25   \n",
-       "11  密弒遊戲2：勝者危亡       Escape Room: Tournament of Champions  2021-08-20   \n",
-       "12   特種部隊：蛇眼之戰                                 Snake Eyes  2021-08-18   \n",
-       "13        脫稿玩家                   Original title: Free Guy  2021-08-12   \n",
-       "14       玩命關頭9                           Fast & Furious 9  2021-08-11   \n",
-       "15    自殺突擊隊：集結                          The Suicide Squad  2021-08-05   \n",
-       "16          除暴                             Caught In Time  2021-07-30   \n",
-       "17        叢林奇航                              Jungle Cruise  2021-07-30   \n",
-       "18       宇宙特攻隊                                  Cosmoball  2021-07-22   \n",
-       "19         黑寡婦                                Black Widow  2021-07-14   \n",
+       "         中文名稱                                  英文名稱        上映日期  \\\n",
+       "0       殺手保鑣2         The Hitman's Wife's Bodyguard  2021-08-25   \n",
+       "1  密弒遊戲2：勝者危亡  Escape Room: Tournament of Champions  2021-08-20   \n",
+       "2   特種部隊：蛇眼之戰                            Snake Eyes  2021-08-18   \n",
+       "3        脫稿玩家              Original title: Free Guy  2021-08-12   \n",
+       "4       玩命關頭9                      Fast & Furious 9  2021-08-11   \n",
+       "5    自殺突擊隊：集結                     The Suicide Squad  2021-08-05   \n",
+       "6          除暴                        Caught In Time  2021-07-30   \n",
+       "7        叢林奇航                         Jungle Cruise  2021-07-30   \n",
+       "8       宇宙特攻隊                             Cosmoball  2021-07-22   \n",
+       "9         黑寡婦                           Black Widow  2021-07-14   \n",
        "\n",
-       "                                                 劇情介紹  \n",
-       "0   今年暑假，影史最賣座的動畫電影系列之一和風靡全球的現象，即將帶來關於一個12歲小男孩的故事，...  \n",
-       "1   《蝙蝠俠》將聚焦於一個年輕版本的布魯斯韋恩，並從中檢視他在面罩之下的靈魂。羅伯派汀森將在新版...  \n",
-       "2   ★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作★《蜘蛛人》宇宙正式成立全新神秘反派吸血鬼「魔比...  \n",
-       "3   派拉蒙影業1986年推出的《捍衛戰士》，由湯姆克魯斯主演，是一齣以航空母艦與美國海軍戰鬥機武...  \n",
-       "4   ★抓鬼始祖回歸！《魔鬼剋星未來世》2020年夏天重磅登場★《蟻人》保羅路德攜《怪奇物與》天才...  \n",
-       "5   《沙丘》講述一個神祕又性格強烈的英雄之心路歷程，本片講述保羅亞崔迪的故事，他是一個聰明又富有...  \n",
-       "6   一向被視為年度大片的007系列電影即將推出第25部，丹尼爾克雷格再度飾演所向披靡，家喻戶曉的...  \n",
-       "7   2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第7名的佳績。睽違三年...  \n",
-       "8   漫威電影宇宙再度擴張，全新動作英雄《尚氣與十環傳奇》正式登場，故事敘述尚氣（劉思慕飾演）自幼...  \n",
-       "9   ★今年暑假超級災難動作強檔！★《即刻救援》億萬巨星連恩尼遜年度鉅獻！★耗資4000萬美金拍攝...  \n",
-       "10  ★億萬票房《殺手保鑣》系列續集，暑假必看!★影史最強三\"賤\"客，原班人馬霸氣回歸，戰力全開「...  \n",
-       "11  為了將害人致死的「世界頂尖密室逃脫」主辦方繩之以法，兩位遊戲生存者柔伊（泰勒羅素飾）和班（羅...  \n",
-       "12  《特種部隊：蛇眼之戰》一片由亨利高汀領銜主演蛇眼，一個充滿決心毅力的獨行俠，在拯救了一個古老...  \n",
-       "13  《脫稿玩家》故事描述一個銀行小職員-蓋伊(萊恩雷諾斯)日復一日年復一年做著無聊的工作，過著樸...  \n",
-       "14  馮迪索飾演的唐老大和莉蒂與他的兒子小布萊恩，正在過著與世隔絕的平靜生活，但是他們都知道這種平...  \n",
-       "15  歡迎來到地獄—全美死亡率最高的「美夢監獄」。那裡關押著最兇惡的超級反派，他們為了逃離該處願意...  \n",
-       "16  ★超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決★金獎影帝吳彥祖與王千源突破...  \n",
-       "17  故事描述一位名叫霍頓博士（艾蜜莉布朗飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之...  \n",
-       "18  ★俄羅斯影史最強特效場景★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰★網友狂讚！媲美《艾莉...  \n",
-       "19  漫威影業2020年的首部重頭戲，是粉絲請求多時，終於實現的《黑寡婦》個人電影，黑寡婦在漫威電...  "
+       "                                                劇情介紹  \\\n",
+       "0  ★億萬票房《殺手保鑣》系列續集，暑假必看!★影史最強三\"賤\"客，原班人馬霸氣回歸，戰力全開「...   \n",
+       "1  為了將害人致死的「世界頂尖密室逃脫」主辦方繩之以法，兩位遊戲生存者柔伊（泰勒羅素飾）和班（羅...   \n",
+       "2  《特種部隊：蛇眼之戰》一片由亨利高汀領銜主演蛇眼，一個充滿決心毅力的獨行俠，在拯救了一個古老...   \n",
+       "3  《脫稿玩家》故事描述一個銀行小職員-蓋伊(萊恩雷諾斯)日復一日年復一年做著無聊的工作，過著樸...   \n",
+       "4  馮迪索飾演的唐老大和莉蒂與他的兒子小布萊恩，正在過著與世隔絕的平靜生活，但是他們都知道這種平...   \n",
+       "5  歡迎來到地獄—全美死亡率最高的「美夢監獄」。那裡關押著最兇惡的超級反派，他們為了逃離該處願意...   \n",
+       "6  ★超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決★金獎影帝吳彥祖與王千源突破...   \n",
+       "7  故事描述一位名叫霍頓博士（艾蜜莉布朗飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之...   \n",
+       "8  ★俄羅斯影史最強特效場景★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰★網友狂讚！媲美《艾莉...   \n",
+       "9  漫威影業2020年的首部重頭戲，是粉絲請求多時，終於實現的《黑寡婦》個人電影，黑寡婦在漫威電...   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://movies.yahoo.com.tw/movieinfo_main/%E6...  \n",
+       "1  https://movies.yahoo.com.tw/movieinfo_main/%E5...  \n",
+       "2  https://movies.yahoo.com.tw/movieinfo_main/%E7...  \n",
+       "3  https://movies.yahoo.com.tw/movieinfo_main/%E8...  \n",
+       "4  https://movies.yahoo.com.tw/movieinfo_main/%E7...  \n",
+       "5  https://movies.yahoo.com.tw/movieinfo_main/%E8...  \n",
+       "6  https://movies.yahoo.com.tw/movieinfo_main/%E9...  \n",
+       "7  https://movies.yahoo.com.tw/movieinfo_main/%E5...  \n",
+       "8  https://movies.yahoo.com.tw/movieinfo_main/%E5...  \n",
+       "9  https://movies.yahoo.com.tw/movieinfo_main/%E9...  "
       ],
       "text/html": [
        "<div>\n",
@@ -130,148 +123,89 @@
        "      <th>英文名稱</th>\n",
        "      <th>上映日期</th>\n",
        "      <th>劇情介紹</th>\n",
+       "      <th>url</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>小小兵2：格魯的崛起</td>\n",
-       "      <td>Minions: The Rise of Guru</td>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>今年暑假，影史最賣座的動畫電影系列之一和風靡全球的現象，即將帶來關於一個12歲小男孩的故事，...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>蝙蝠俠</td>\n",
-       "      <td>The Batman</td>\n",
-       "      <td>2022-03-04</td>\n",
-       "      <td>《蝙蝠俠》將聚焦於一個年輕版本的布魯斯韋恩，並從中檢視他在面罩之下的靈魂。羅伯派汀森將在新版...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>魔比斯</td>\n",
-       "      <td>Morbius</td>\n",
-       "      <td>2022-01-16</td>\n",
-       "      <td>★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作★《蜘蛛人》宇宙正式成立全新神秘反派吸血鬼「魔比...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>捍衛戰士：獨行俠</td>\n",
-       "      <td>Top Gun: Maverick</td>\n",
-       "      <td>2021-11-19</td>\n",
-       "      <td>派拉蒙影業1986年推出的《捍衛戰士》，由湯姆克魯斯主演，是一齣以航空母艦與美國海軍戰鬥機武...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>魔鬼剋星：未來世</td>\n",
-       "      <td>Ghostbusters: Afterlife</td>\n",
-       "      <td>2021-11-11</td>\n",
-       "      <td>★抓鬼始祖回歸！《魔鬼剋星未來世》2020年夏天重磅登場★《蟻人》保羅路德攜《怪奇物與》天才...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>沙丘</td>\n",
-       "      <td>Dune</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "      <td>《沙丘》講述一個神祕又性格強烈的英雄之心路歷程，本片講述保羅亞崔迪的故事，他是一個聰明又富有...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>007生死交戰</td>\n",
-       "      <td>No Time to Die</td>\n",
-       "      <td>2021-10-01</td>\n",
-       "      <td>一向被視為年度大片的007系列電影即將推出第25部，丹尼爾克雷格再度飾演所向披靡，家喻戶曉的...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>猛毒2：血蜘蛛</td>\n",
-       "      <td>Venom: Let There Be Carnage</td>\n",
-       "      <td>2021-09-16</td>\n",
-       "      <td>2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第7名的佳績。睽違三年...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>尚氣與十環傳奇</td>\n",
-       "      <td>Shang-Chi and the Legend of the Ten Rings</td>\n",
-       "      <td>2021-09-03</td>\n",
-       "      <td>漫威電影宇宙再度擴張，全新動作英雄《尚氣與十環傳奇》正式登場，故事敘述尚氣（劉思慕飾演）自幼...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>疾凍救援</td>\n",
-       "      <td>The Ice Road</td>\n",
-       "      <td>2021-08-25</td>\n",
-       "      <td>★今年暑假超級災難動作強檔！★《即刻救援》億萬巨星連恩尼遜年度鉅獻！★耗資4000萬美金拍攝...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>殺手保鑣2</td>\n",
        "      <td>The Hitman's Wife's Bodyguard</td>\n",
        "      <td>2021-08-25</td>\n",
        "      <td>★億萬票房《殺手保鑣》系列續集，暑假必看!★影史最強三\"賤\"客，原班人馬霸氣回歸，戰力全開「...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E6...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>1</th>\n",
        "      <td>密弒遊戲2：勝者危亡</td>\n",
        "      <td>Escape Room: Tournament of Champions</td>\n",
        "      <td>2021-08-20</td>\n",
        "      <td>為了將害人致死的「世界頂尖密室逃脫」主辦方繩之以法，兩位遊戲生存者柔伊（泰勒羅素飾）和班（羅...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>2</th>\n",
        "      <td>特種部隊：蛇眼之戰</td>\n",
        "      <td>Snake Eyes</td>\n",
        "      <td>2021-08-18</td>\n",
        "      <td>《特種部隊：蛇眼之戰》一片由亨利高汀領銜主演蛇眼，一個充滿決心毅力的獨行俠，在拯救了一個古老...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E7...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>3</th>\n",
        "      <td>脫稿玩家</td>\n",
        "      <td>Original title: Free Guy</td>\n",
        "      <td>2021-08-12</td>\n",
        "      <td>《脫稿玩家》故事描述一個銀行小職員-蓋伊(萊恩雷諾斯)日復一日年復一年做著無聊的工作，過著樸...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E8...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>4</th>\n",
        "      <td>玩命關頭9</td>\n",
        "      <td>Fast &amp; Furious 9</td>\n",
        "      <td>2021-08-11</td>\n",
        "      <td>馮迪索飾演的唐老大和莉蒂與他的兒子小布萊恩，正在過著與世隔絕的平靜生活，但是他們都知道這種平...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E7...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>5</th>\n",
        "      <td>自殺突擊隊：集結</td>\n",
        "      <td>The Suicide Squad</td>\n",
        "      <td>2021-08-05</td>\n",
        "      <td>歡迎來到地獄—全美死亡率最高的「美夢監獄」。那裡關押著最兇惡的超級反派，他們為了逃離該處願意...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E8...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>6</th>\n",
        "      <td>除暴</td>\n",
        "      <td>Caught In Time</td>\n",
        "      <td>2021-07-30</td>\n",
        "      <td>★超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決★金獎影帝吳彥祖與王千源突破...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E9...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>7</th>\n",
        "      <td>叢林奇航</td>\n",
        "      <td>Jungle Cruise</td>\n",
        "      <td>2021-07-30</td>\n",
        "      <td>故事描述一位名叫霍頓博士（艾蜜莉布朗飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>8</th>\n",
        "      <td>宇宙特攻隊</td>\n",
        "      <td>Cosmoball</td>\n",
        "      <td>2021-07-22</td>\n",
        "      <td>★俄羅斯影史最強特效場景★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰★網友狂讚！媲美《艾莉...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E5...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>9</th>\n",
        "      <td>黑寡婦</td>\n",
        "      <td>Black Widow</td>\n",
        "      <td>2021-07-14</td>\n",
        "      <td>漫威影業2020年的首部重頭戲，是粉絲請求多時，終於實現的《黑寡婦》個人電影，黑寡婦在漫威電...</td>\n",
+       "      <td>https://movies.yahoo.com.tw/movieinfo_main/%E9...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -279,9 +213,38 @@
       ]
      },
      "metadata": {},
-     "execution_count": 110
+     "execution_count": 15
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import re\n",
+    "\n",
+    "url = 'https://movies.yahoo.com.tw/movieinfo_main/%E5%B0%8F%E5%B0%8F%E5%85%B52-%E6%A0%BC%E9%AD%AF%E7%9A%84%E5%B4%9B%E8%B5%B7-minions-the-rise-of-guru-10493'\n",
+    "r = requests.get(url)\n",
+    "soup = BeautifulSoup(r.text)\n",
+    "info = {}\n",
+    "categories = []\n",
+    "category = {}\n",
+    "info['中文名稱'] = soup.find('div',class_= 'movie_intro_info_r').find('h1').text.strip()\n",
+    "info['英文名稱'] = soup.find('div',class_= 'movie_intro_info_r').find('h3').text.strip()\n",
+    "info['上映日期'] = soup.find('div',class_= 'movie_intro_info_r').find('span').text.split('上映日期：')[1]\n",
+    "\n",
+    "for i,d in enumerate(soup.find('div', class_='level_name_box').find_all('div',class_='level_name')):\n",
+    "    category[i] = d.find('a', class_='gabtn').text.strip()\n",
+    "\n",
+    "categories.append(category)\n",
+    "info['類別'] = categories\n",
+    "info['劇情介紹'] = re.sub('\\s+','', soup.find('div', class_='gray_infobox_inner').find('span').text.strip())\n",
+    "print(info)"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
