--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "source": [
     "def ckeck_exist(info,ress):\n",
     "    for item in ress:\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -51,10 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(infos)\n",
+    "df = pd.DataFrame(ress)\n",
     "df.to_csv('movies.csv', encoding='utf_8_sig')\n",
     "\n",
     "df"
@@ -213,14 +213,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -244,7 +244,15 @@
     "info['劇情介紹'] = re.sub('\\s+','', soup.find('div', class_='gray_infobox_inner').find('span').text.strip())\n",
     "print(info)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'中文名稱': '小小兵2：格魯的崛起', '英文名稱': 'Minions: The Rise of Guru', '上映日期': '2022-07-01', '類別': [{0: '動畫', 1: '動作', 2: '喜劇'}], '劇情介紹': '今年暑假，影史最賣座的動畫電影系列之一和風靡全球的現象，即將帶來關於一個12歲小男孩的故事，他夢想成為世上最偉大的超級大壞蛋。這部全新動畫喜劇動作片就是《小小兵2：格魯的崛起》。這部電影充滿了照明娛樂招牌的顛覆性和無厘頭喜劇橋段、各種大眾文化的笑梗、感人肺腑的劇情、勁爆的電影配樂，以及宇宙超級無敵誇張的動作場面。《小小兵2：格魯的崛起》一片由這個電影系列的原創掌舵，製片包括照明娛樂極具遠見的創辦人和執行長克里斯梅勒丹德利、他的長期合作夥伴珍娜海莉，以及克里斯雷納德，導演凱爾巴爾達（《神偷奶爸3》、《小小兵》）則再度回歸執導這部電影。共同導演是布萊德艾柏森（長壽喜劇影集《辛普森家庭》）以及強納森戴凡（《寵物當家》系列電影）。'}\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
