--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "source": [
     "import requests \n",
     "from bs4 import BeautifulSoup \n",
@@ -14,45 +14,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "source": [
     "#check data exist or not\n",
     "def ckeck_exist(url,pages):\n",
-    "    for item in pages:\n",
-    "        if url in item:\n",
-    "            return 0"
+    "    if url in pages:\n",
+    "        return 0"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "source": [
     "# 發起請求\n",
     "def start_requests(url):\n",
-    "    #print(url)\n",
     "    r = requests.get(url)\n",
-    "    return r.content"
+    "    if r.status_code == requests.codes.ok:\n",
+    "        return r.content\n",
+    "    else:\n",
+    "        return 0"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "source": [
     "# 解析一級網頁 獲取 url List\n",
-    "def get_page(text):\n",
-    "    soup = BeautifulSoup(text, 'html.parser')\n",
-    "    movies = soup.find_all('div', class_ = 'release_info')\n",
+    "def get_page():\n",
     "    pages = []\n",
-    "    for movie in movies:\n",
-    "        url = movie.find('div', class_='release_movie_name').a['href']\n",
-    "        tf = ckeck_exist(url,pages)\n",
-    "        if tf == 0:\n",
-    "            continue\n",
-    "        pages.append(url)\n",
+    "    for genre in range(1, 13):\n",
+    "        for page in range(1,80):\n",
+    "            url = 'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id={}&page={}'.format(genre,page)\n",
+    "            text = start_requests(url)\n",
+    "            if text !=0:\n",
+    "                soup = BeautifulSoup(text, 'html.parser')\n",
+    "                movies = soup.find_all('div', class_ = 'release_info')\n",
+    "\n",
+    "                for movie in movies:\n",
+    "                    url = movie.find('div', class_='release_movie_name').a['href']\n",
+    "                    tff = ckeck_exist(url,pages)\n",
+    "                    if tff != 0:\n",
+    "                        pages.append(url)\n",
+    "    for genre in range(13, 21):\n",
+    "            for page in range(1,21):\n",
+    "                url = 'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id={}&page={}'.format(genre,page)\n",
+    "                text = start_requests(url)\n",
+    "                if text !=0:\n",
+    "                    soup = BeautifulSoup(text, 'html.parser')\n",
+    "                    movies = soup.find_all('div', class_ = 'release_info')\n",
+    "\n",
+    "                    for movie in movies:\n",
+    "                        url = movie.find('div', class_='release_movie_name').a['href']\n",
+    "                        tff = ckeck_exist(url,pages)\n",
+    "                        if tff != 0:\n",
+    "                            pages.append(url)\n",
     "        \n",
     "    return pages"
    ],
@@ -61,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "source": [
     "# 解析二級網頁 獲取訊息\n",
     "def parse_page(url):\n",
@@ -86,18 +105,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "source": [
     "result_list = []\n",
-    "for genre in range(1, 22):\n",
-    "    for page in range(1,31):\n",
-    "        url = 'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id={}&page={}'.format(genre,page)\n",
-    "        text = start_requests(url)\n",
-    "        pageurls = get_page(text) # 解析一級頁面\n",
-    "        for pageurl in pageurls: # 解析二級頁面\n",
-    "            page = start_requests(pageurl)\n",
-    "            mydict = parse_page(page)\n",
-    "            result_list.append(mydict)\n",
+    "\n",
+    "pageurls = get_page() # 解析一級頁面\n",
+    "        \n",
+    "for pageurl in pageurls: # 解析二級頁面\n",
+    "    page = start_requests(pageurl)\n",
+    "    mydict = parse_page(page)\n",
+    "    result_list.append(mydict)\n",
     "#write data to csv\n",
     "df = pd.DataFrame(result_list)\n",
     "df.to_csv('movies.csv', encoding='utf_8_sig')\n",
@@ -109,31 +126,31 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "            中文名稱                       英文名稱        上映日期  \\\n",
-       "0     小小兵2：格魯的崛起  Minions: The Rise of Guru  2022-07-01   \n",
-       "1            蝙蝠俠                 The Batman  2022-03-04   \n",
-       "2            魔比斯                    Morbius  2022-01-16   \n",
-       "3       捍衛戰士：獨行俠          Top Gun: Maverick  2021-11-19   \n",
-       "4       魔鬼剋星：未來世    Ghostbusters: Afterlife  2021-11-11   \n",
-       "...          ...                        ...         ...   \n",
-       "4759    通靈少女 第二季       The Teenage Psychic2  2019-10-06   \n",
-       "4760        彼岸之嫁            The Ghost Bride  2020-01-23   \n",
-       "4761        極道千金             Triad Princess  2019-12-06   \n",
-       "4762         罪夢者                Nowhere Man  2019-10-31   \n",
-       "4763    通靈少女 第二季       The Teenage Psychic2  2019-10-06   \n",
+       "                       中文名稱                       英文名稱        上映日期  \\\n",
+       "0                小小兵2：格魯的崛起  Minions: The Rise of Guru  2022-07-01   \n",
+       "1                       蝙蝠俠                 The Batman  2022-03-04   \n",
+       "2                       魔比斯                    Morbius  2022-01-16   \n",
+       "3                  捍衛戰士：獨行俠          Top Gun: Maverick  2021-11-19   \n",
+       "4                  魔鬼剋星：未來世    Ghostbusters: Afterlife  2021-11-11   \n",
+       "...                     ...                        ...         ...   \n",
+       "5102              2017高雄電影節                             2017-10-20   \n",
+       "5103        2017第三屆臺中國際動畫影展                             2017-10-13   \n",
+       "5104  阿莫多瓦 in 80s  經典數位修復影展                                     未定   \n",
+       "5105                   極道千金             Triad Princess  2019-12-06   \n",
+       "5106               通靈少女 第二季       The Teenage Psychic2  2019-10-06   \n",
        "\n",
-       "                                                   類別  \\\n",
-       "0                       [{0: '動畫', 1: '動作', 2: '喜劇'}]   \n",
-       "1                                [{0: '動作', 1: '犯罪'}]   \n",
-       "2                                [{0: '動作', 1: '劇情'}]   \n",
-       "3                                [{0: '動作', 1: '劇情'}]   \n",
-       "4           [{0: '動作', 1: '冒險', 2: '懸疑/驚悚', 3: '喜劇'}]   \n",
-       "...                                               ...   \n",
-       "4759                             [{0: '戲劇', 1: '影集'}]   \n",
-       "4760  [{0: '愛情', 1: '戲劇', 2: '影集', 3: '奇幻', 4: '劇情'}]   \n",
-       "4761                             [{0: '戲劇', 1: '影集'}]   \n",
-       "4762           [{0: '戲劇', 1: '影集', 2: '動作', 3: '冒險'}]   \n",
-       "4763                             [{0: '戲劇', 1: '影集'}]   \n",
+       "                                             類別  \\\n",
+       "0                 [{0: '動畫', 1: '動作', 2: '喜劇'}]   \n",
+       "1                          [{0: '動作', 1: '犯罪'}]   \n",
+       "2                          [{0: '動作', 1: '劇情'}]   \n",
+       "3                          [{0: '動作', 1: '劇情'}]   \n",
+       "4     [{0: '動作', 1: '冒險', 2: '懸疑/驚悚', 3: '喜劇'}]   \n",
+       "...                                         ...   \n",
+       "5102                                [{0: '影展'}]   \n",
+       "5103                                [{0: '影展'}]   \n",
+       "5104                                [{0: '影展'}]   \n",
+       "5105                       [{0: '戲劇', 1: '影集'}]   \n",
+       "5106                       [{0: '戲劇', 1: '影集'}]   \n",
        "\n",
        "                                                   劇情介紹  \n",
        "0     今年暑假，影史最賣座的動畫電影系列之一和風靡全球的現象，即將帶來關於一個12歲小男孩的故事，...  \n",
@@ -142,13 +159,13 @@
        "3     派拉蒙影業1986年推出的《捍衛戰士》，由湯姆克魯斯主演，是一齣以航空母艦與美國海軍戰鬥機武...  \n",
        "4     ★抓鬼始祖回歸！《魔鬼剋星未來世》2020年夏天重磅登場★《蟻人》保羅路德攜《怪奇物與》天才...  \n",
        "...                                                 ...  \n",
-       "4759  《通靈少女》講述一個有通靈體質的高中女生（郭書瑤飾），白天學校上課，晚上在宮廟當仙姑，處理信...  \n",
-       "4760  ★Netflix第三部華語自製原創影集《彼岸之嫁》★改編自華裔作家朱洋熹所撰寫的紐約時報暢銷...  \n",
-       "4761  《極道千金》故事敘述一個從小就在黑道爸爸庇蔭下長大的女孩安琪（劉奕兒飾演），長相甜美卻個性剽...  \n",
-       "4762  《罪夢者》故事講述死刑犯阿全在獄中等待死刑的漫漫長日裡，聽聞自己的兒子遭到綁架，為了救回兒子...  \n",
-       "4763  《通靈少女》講述一個有通靈體質的高中女生（郭書瑤飾），白天學校上課，晚上在宮廟當仙姑，處理信...  \n",
+       "5102  全台最具「奇幻個性」的高雄電影節，今年以「慾望之味」做為17周年的獻禮，首創並集結影史永難忘...  \n",
+       "5103  國內一年一度的動畫盛事「臺中國際動畫影展」邁入第三屆，作為臺灣少數以動畫為主題的影展，除了推...  \n",
+       "5104  80年代的西班牙，剛從威權專制進入民主自由的時代，一切藝術、文化、娛樂活動蓬勃發展。阿莫多瓦...  \n",
+       "5105  《極道千金》故事敘述一個從小就在黑道爸爸庇蔭下長大的女孩安琪（劉奕兒飾演），長相甜美卻個性剽...  \n",
+       "5106  《通靈少女》講述一個有通靈體質的高中女生（郭書瑤飾），白天學校上課，晚上在宮廟當仙姑，處理信...  \n",
        "\n",
-       "[4764 rows x 5 columns]"
+       "[5107 rows x 5 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -226,23 +243,31 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4759</th>\n",
-       "      <td>通靈少女 第二季</td>\n",
-       "      <td>The Teenage Psychic2</td>\n",
-       "      <td>2019-10-06</td>\n",
-       "      <td>[{0: '戲劇', 1: '影集'}]</td>\n",
-       "      <td>《通靈少女》講述一個有通靈體質的高中女生（郭書瑤飾），白天學校上課，晚上在宮廟當仙姑，處理信...</td>\n",
+       "      <th>5102</th>\n",
+       "      <td>2017高雄電影節</td>\n",
+       "      <td></td>\n",
+       "      <td>2017-10-20</td>\n",
+       "      <td>[{0: '影展'}]</td>\n",
+       "      <td>全台最具「奇幻個性」的高雄電影節，今年以「慾望之味」做為17周年的獻禮，首創並集結影史永難忘...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4760</th>\n",
-       "      <td>彼岸之嫁</td>\n",
-       "      <td>The Ghost Bride</td>\n",
-       "      <td>2020-01-23</td>\n",
-       "      <td>[{0: '愛情', 1: '戲劇', 2: '影集', 3: '奇幻', 4: '劇情'}]</td>\n",
-       "      <td>★Netflix第三部華語自製原創影集《彼岸之嫁》★改編自華裔作家朱洋熹所撰寫的紐約時報暢銷...</td>\n",
+       "      <th>5103</th>\n",
+       "      <td>2017第三屆臺中國際動畫影展</td>\n",
+       "      <td></td>\n",
+       "      <td>2017-10-13</td>\n",
+       "      <td>[{0: '影展'}]</td>\n",
+       "      <td>國內一年一度的動畫盛事「臺中國際動畫影展」邁入第三屆，作為臺灣少數以動畫為主題的影展，除了推...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4761</th>\n",
+       "      <th>5104</th>\n",
+       "      <td>阿莫多瓦 in 80s  經典數位修復影展</td>\n",
+       "      <td></td>\n",
+       "      <td>未定</td>\n",
+       "      <td>[{0: '影展'}]</td>\n",
+       "      <td>80年代的西班牙，剛從威權專制進入民主自由的時代，一切藝術、文化、娛樂活動蓬勃發展。阿莫多瓦...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5105</th>\n",
        "      <td>極道千金</td>\n",
        "      <td>Triad Princess</td>\n",
        "      <td>2019-12-06</td>\n",
@@ -250,15 +275,7 @@
        "      <td>《極道千金》故事敘述一個從小就在黑道爸爸庇蔭下長大的女孩安琪（劉奕兒飾演），長相甜美卻個性剽...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4762</th>\n",
-       "      <td>罪夢者</td>\n",
-       "      <td>Nowhere Man</td>\n",
-       "      <td>2019-10-31</td>\n",
-       "      <td>[{0: '戲劇', 1: '影集', 2: '動作', 3: '冒險'}]</td>\n",
-       "      <td>《罪夢者》故事講述死刑犯阿全在獄中等待死刑的漫漫長日裡，聽聞自己的兒子遭到綁架，為了救回兒子...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4763</th>\n",
+       "      <th>5106</th>\n",
        "      <td>通靈少女 第二季</td>\n",
        "      <td>The Teenage Psychic2</td>\n",
        "      <td>2019-10-06</td>\n",
@@ -267,12 +284,12 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4764 rows × 5 columns</p>\n",
+       "<p>5107 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 49
     }
    ],
    "metadata": {}
