--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "source": [
     "import requests \n",
     "from bs4 import BeautifulSoup \n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "source": [
     "#check data exist or not\n",
     "def ckeck_exist(url,pages):\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "source": [
     "# 發起請求\n",
     "def start_requests(url):\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "source": [
     "# 解析一級網頁 獲取 url List\n",
     "def get_page():\n",
@@ -80,13 +80,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 64,
    "source": [
     "# 解析二級網頁 獲取訊息\n",
     "def parse_page(url):\n",
     "    soup = BeautifulSoup(url, 'html.parser')\n",
     "    info = {}\n",
-    "    categories = []\n",
+    "    #categories = []\n",
     "    category = {}\n",
     "    info['中文名稱'] = soup.find('div',class_= 'movie_intro_info_r').find('h1').text.strip()\n",
     "    info['英文名稱'] = soup.find('div',class_= 'movie_intro_info_r').find('h3').text.strip()\n",
@@ -95,8 +95,8 @@
     "    for i,d in enumerate(soup.find('div', class_='level_name_box').find_all('div',class_='level_name')):\n",
     "        category[i] = d.find('a', class_='gabtn').text.strip()\n",
     "\n",
-    "    categories.append(category)\n",
-    "    info['類別'] = categories\n",
+    "    #categories.append(category)\n",
+    "    info['類別'] = category\n",
     "    info['劇情介紹'] = re.sub('\\s+','', soup.find('div', class_='gray_infobox_inner').find('span').text.strip())\n",
     "    return info"
    ],
